--- a/src/App.css
+++ b/src/App.css
@@ -1254,7 +1254,7 @@ Versie 1 */
 
 .u-section-1 .u-form-1 {
   height: 77px;
-  margin: -136px 250px 0 434px;
+  margin: -236px 250px 0 434px;
 }
 
 .u-section-1 .u-input-1 {
@@ -1267,6 +1267,7 @@ Versie 1 */
   font-weight: 700;
   text-transform: uppercase;
   background-image: none;
+  margin: -16px 50px 0 34px;
 }
 
 .u-section-1 .u-text-5 {
@@ -1310,6 +1311,7 @@ Versie 1 */
   font-weight: 700;
   text-transform: uppercase;
   background-image: none;
+  margin: -13px 50px 23px 34px;
 }
 
 @media (max-width: 1199px) {
@@ -1462,7 +1464,7 @@ Versie 1 */
 
 .u-section-2 .u-form-1 {
   height: 77px;
-  margin: -123px 247px 0 437px;
+  margin: -123px 250px 0 434px;
 }
 
 .u-section-2 .u-input-1 {
@@ -1475,6 +1477,7 @@ Versie 1 */
   font-weight: 700;
   text-transform: uppercase;
   background-image: none;
+    margin: -16px 50px 0 34px;
 }
 
 .u-section-2 .u-text-4 {
@@ -1572,6 +1575,7 @@ Versie 1 */
 .u-section-2 .u-container-layout-4 {
   padding-left: 200px;
   padding-right: 300px;
+  padding-bottom: -150px;
 }
 
 .u-section-2 .u-text-10 {
@@ -1581,11 +1585,24 @@ Versie 1 */
 .u-section-2 .u-form-4 {
   height: 100px;
   background-image: none;
-  margin: 29px 24px 0 0;
+  margin: -129px 24px 0 0;
 }
 
 .u-section-2 .u-input-4 {
   background-image: none;
+  width: 500;
+    position: relative;
+      left: 650px;
+      background-color: #eaf1ee;
+}
+
+.u-section-2 .u-input-4v1 {
+  background-image: none;
+  width: 500;
+  position: relative;
+  left: 650px;
+  top: 100px;
+  background-color: #eaf1ee;
 }
 
 .u-section-2 .u-btn-4 {
@@ -1594,7 +1611,18 @@ Versie 1 */
   font-weight: 700;
   text-transform: uppercase;
   background-image: none;
-  position:relative; left: 800px;
+  position:relative; left: 750px;
+}
+
+.u-section-2 .u-btn-4v1 {
+  letter-spacing: 1px;
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-image: none;
+  position: relative;
+  left: 750px;
+  top: 100px;
 }
 
 .u-section-2 .u-text-11 {
@@ -2222,4 +2250,28 @@ position: relative; top: 250px; left: 200px;
 
 .btn2{
   position: relative; top: 250px; left: 200px;
+}
+
+.btnHomev1{
+  position: relative;
+    top: -300px;
+    left: 1700px;
+}
+
+.btnHomev2 {
+  position: relative;
+  top: -300px;
+  left: 1700px;
+}
+
+.btnStop{
+    position: relative;
+      top: -100px;
+      left: 150px;
+}
+
+.btnStart{
+  position: relative;
+    top: -20px;
+    left: 0px;
 }
